# crewai_multi_agent

./: .env  README.md  main.py  pyproject.toml
completed/breaking_block/20260411-2_gemma4-26b/: log.txt  main.py
completed/breaking_block/20260411-2_gemma4-26b/works/: 01_requirements.md  02_spec_design.md  03_program.md  04_test_report.md  program.py
completed/tetoris/20260412-2_gemma4-26b/: log.txt  main.py
completed/tetoris/20260412-2_gemma4-26b/works/: 01_requirements.md  02_spec_design.md  03_program.md  04_test_report.md  program.py
works/: 01_requirements.md  02_spec_design.md  03_program.md  04_test_report.md  program.py
