[project]
name = "crewai-multi-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=1.13.0",
    "crewai-tools>=1.13.0",
    "ddgs>=9.13.0",
    "duckduckgo-search>=8.1.1",
    "langchain-community>=0.4.1",
]
